erDiagram
  regulations {
    varchar regulation_id PK
    varchar act
    varchar reg_code
    varchar control_name
    int threshold_days
    varchar trigger_type
    varchar embedding_id
    date effective_date
    varchar version
  }

  data_assets {
    varchar asset_id PK
    varchar asset_name
    varchar asset_type
    varchar system
    varchar table_name
    varchar owner_team
    varchar data_classification
    bigint row_count_est
    varchar refresh_cadence
  }

  critical_data_elements {
    varchar cde_id PK
    varchar asset_id FK
    varchar field_name
    varchar data_type
    boolean pii_flag
    boolean compliance_critical
    decimal population_rate_pct
    date last_populated
    boolean is_schema_enrichment
    boolean is_behavior_trigger
  }

  asset_regulation_map {
    varchar map_id PK
    varchar asset_id FK
    varchar regulation_id FK
    varchar cde_ids
    varchar compliance_owner
    boolean in_scope
  }

  compliance_violations {
    varchar violation_id PK
    varchar regulation_id FK
    varchar asset_id FK
    varchar cde_id FK
    varchar account_id
    varchar violation_type
    timestamp detected_at
    varchar trigger_type
    int days_in_breach
    varchar severity
    varchar status
    varchar remediation_step_id FK
  }

  remediation_steps {
    varchar step_id PK
    varchar regulation_id FK
    int step_number
    varchar step_title
    varchar action_type
    boolean automated
    boolean requires_approval
    text sql_template
  }

  compliance_scans {
    varchar scan_id PK
    varchar regulation_id FK
    date scan_date
    int accounts_in_scope
    int violations_found
    decimal violation_rate_pct
    boolean alert_fired
  }

  policy_changes {
    varchar change_id PK
    varchar regulation_id FK
    timestamp detected_at
    varchar change_type
    boolean material
    varchar impact_asset_ids
    varchar impact_report_id
  }

  schema_events {
    varchar event_id PK
    varchar asset_id FK
    varchar event_type
    varchar field_name
    timestamp detected_at
    bigint rows_affected
    varchar impact_report_id
  }

  regulations ||--o{ asset_regulation_map : "governs"
  data_assets ||--o{ asset_regulation_map : "mapped to"
  data_assets ||--o{ critical_data_elements : "contains"
  regulations ||--o{ compliance_violations : "violated by"
  data_assets ||--o{ compliance_violations : "source of"
  critical_data_elements ||--o{ compliance_violations : "field in breach"
  regulations ||--o{ remediation_steps : "resolved by"
  compliance_violations }o--o| remediation_steps : "assigned"
  regulations ||--o{ compliance_scans : "scanned for"
  regulations ||--o{ policy_changes : "updated by"
  data_assets ||--o{ schema_events : "schema changed"
